--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "前端知识体系梳理笔记",
   "main": "index.js",
   "scripts": {
-    "start": "node ./scripts/start.js"
+    "start": "node node_modules/.bin/docsify serve"
   },
   "repository": {
     "type": "git",
@@ -18,9 +18,6 @@
   "homepage": "https://github.com/foolproof119/FE-knowledge#readme",
   "dependencies": {
     "docsify-cli": "^4.4.4",
-    "webpack": "^5.71.0"
-  },
-  "devDependencies": {
-    "@juexro/markdown2html": "^1.0.3"
+    "lodash": "^4.17.21"
   }
 }
